tests/paczka1/fuzzy1/95351990.err
Error in line 5: TSy S173 29,y
Error in line 3: FBO03h5Nj4M S62 53,5
Error in line 8: ZAeIQOWEL S273 84,8
Error in line 15: TF3 S173 33,3
Error in line 23: TF3 S273 79,0
Error in line 30: TF3 S385 41,2
Error in line 1: TSy S173 25,1
Error in line 37: 173 273 1,0
